tests/semantic/adt_invalid_arity/adt_invalid_arity.err
Error: Invalid arity, the declared arity of Symbol is 1 in file adt_invalid_arity.dl at line 19
A(($Symbol("a",$Symbol("x")))).
---^----------------------------
1 errors generated, evaluation aborted
